<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings">
    <org.amnezia.awg.preference.VersionPreference
        android:key="version" />
    <Preference
        android:key="open_source"
        android:singleLineTitle="false"
        android:summary="@string/open_source_summary"
        android:title="@string/open_source_title" />
    <Preference
        android:key="privacy_policy"
        android:singleLineTitle="false"
        android:summary="@string/privacy_policy_summary"
        android:title="@string/privacy_policy_title" />
    <Preference
        android:key="terms_of_service"
        android:singleLineTitle="false"
        android:summary="@string/terms_of_service_summary"
        android:title="@string/terms_of_service_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="restore_on_boot"
        android:singleLineTitle="false"
        android:summaryOff="@string/restore_on_boot_summary_off"
        android:summaryOn="@string/restore_on_boot_summary_on"
        android:title="@string/restore_on_boot_title" />
    <org.amnezia.awg.preference.ZipExporterPreference android:key="zip_exporter" />
    <org.amnezia.awg.preference.QuickTilePreference android:key="quick_tile" />
    <Preference
        android:key="log_viewer"
        android:singleLineTitle="false"
        android:summary="@string/log_viewer_pref_summary"
        android:title="@string/log_viewer_pref_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="dark_theme"
        android:singleLineTitle="false"
        android:summaryOff="@string/dark_theme_summary_off"
        android:summaryOn="@string/dark_theme_summary_on"
        android:title="@string/dark_theme_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="multiple_tunnels"
        android:singleLineTitle="false"
        android:summaryOff="@string/multiple_tunnels_summary_off"
        android:summaryOn="@string/multiple_tunnels_summary_on"
        android:title="@string/multiple_tunnels_title" />
    <org.amnezia.awg.preference.ToolsInstallerPreference android:key="tools_installer" />
    <org.amnezia.awg.preference.KernelModuleEnablerPreference android:key="kernel_module_enabler" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="allow_remote_control_intents"
        android:singleLineTitle="false"
        android:summaryOff="@string/allow_remote_control_intents_summary_off"
        android:summaryOn="@string/allow_remote_control_intents_summary_on"
        android:title="@string/allow_remote_control_intents_title" />
</androidx.preference.PreferenceScreen>
