<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_sheet_item_height"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/medium_margin"
    android:paddingEnd="@dimen/medium_margin">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="12dp"
        app:srcCompat="@drawable/ic_lock_premium"
        app:tint="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erawan_premium_servers_title"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erawan_premium_servers_subtitle"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erawan_upgrade_cta"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorPrimary" />

</LinearLayout>
